fix(dragselect): apply higher z-index to static elements

--- a/src/frontend/css/toolbars.css
+++ b/src/frontend/css/toolbars.css
@@ -12,6 +12,7 @@ aside {
 	box-sizing: border-box;
 	padding: 5px;
 	color: #3C3C3C;
+	z-index: 1;
 }
 
 aside * {
@@ -61,6 +62,7 @@ header {
 	align-items: center;
 	padding: 0 15px;
 	gap: 10px;
+	z-index: 1;
 }
 
 header button {
